refactor: fix SonarQube issues in PaginationUtils